<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Basketball Game</string>
    <string name="menu">back to menu</string>
    <string name="desc_move_left">Move left</string>
    <string name="desc_move_right">Move right</string>
    <string name="desc_heart">Heart icon representing a life</string>
    <string name="desc_player">Basketball player character</string>
    <string name="desc_background">Basketball court background</string>
    <string name="toast_new_game_started">New Game Started!</string>
    <string name="game_over">Game Over</string>
    <string name="toast_lost_life">You lose the ball!</string>
    <string name="desc_score">Current score</string>
    <string name="game_name">Basketball Game</string>
    <string name="button_fast">Play with Buttons (Fast)</string>
    <string name="button_slow">Play with Buttons (Slow)</string>
    <string name="high_score_table">High Score table</string>
    <string name="tilt">Play with Tilt</string>
    <string name="score_name_placeholder">Name</string>
    <string name="score_value_placeholder">Score</string>
    <string name="location_button_description">Show location on map</string>
</resources>

