<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/basketball_court"
        android:contentDescription="@string/desc_background" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#30FFFFFF" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/player"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:src="@drawable/ball"
        android:contentDescription="@string/desc_player" />

    <FrameLayout
        android:id="@+id/obstacles_layer"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/lives_layout"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:padding="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heart1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/desc_heart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heart2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/desc_heart" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/heart3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:src="@drawable/heart"
            android:contentDescription="@string/desc_heart" />
    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Score: 0"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        android:contentDescription="@string/desc_score" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_left"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="32dp"
        android:text=""
        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/arrow_left"
        app:iconGravity="textStart"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        android:contentDescription="@string/desc_move_left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_right"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="32dp"
        android:text=""
        android:backgroundTint="@android:color/transparent"
        app:icon="@drawable/arrow_right"
        app:iconGravity="textStart"
        app:iconSize="48dp"
        app:iconTint="@android:color/black"
        android:contentDescription="@string/desc_move_right" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/game_over_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_over"
        android:textSize="48sp"
        android:textStyle="bold"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:textColor="@color/red1"
        android:contentDescription="@string/game_over" />

</RelativeLayout>
